<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nokopi.stopwatchtimer.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/timerText"
            android:text="@{viewModel.timerText}"
            tools:text="00:00"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="300sp"
            android:autoSizeStepGranularity="2sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/centerGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/centerGuide"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/startTimerBtn"
            android:text="@string/start"
            android:layout_margin="3dp"
            android:enabled="@{viewModel.startTimerBtnEnabled}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/stopTimerBtn"
            app:layout_constraintTop_toBottomOf="@id/centerGuide"
            app:layout_constraintBottom_toTopOf="@id/resetTimerBtn"
            android:onClick="@{() -> viewModel.startTimer()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/stopTimerBtn"
            android:text="@string/stop"
            android:layout_margin="3dp"
            android:enabled="@{viewModel.stopTimerBtnEnabled}"
            app:layout_constraintLeft_toRightOf="@id/startTimerBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/centerGuide"
            app:layout_constraintBottom_toTopOf="@id/bellBtn"
            android:onClick="@{() -> viewModel.stopTimer()}"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/resetTimerBtn"
            android:text="@string/reset"
            android:layout_margin="3dp"
            android:enabled="@{viewModel.resetTimerBtnEnabled}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bellBtn"
            app:layout_constraintTop_toBottomOf="@id/stopTimerBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> viewModel.resetTimer()}"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/bellBtn"
            android:layout_margin="3dp"
            android:src="@drawable/baseline_audiotrack_24"
            app:layout_constraintLeft_toRightOf="@id/resetTimerBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stopTimerBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> viewModel.playChimeSound()}"
            android:contentDescription="@string/play_sound" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstChimeTime"
            android:text="@{@string/first_chime(viewModel.firstChimeTime)}"
            tools:text="@string/first_chime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/secondChimeTime"
            app:layout_constraintBottom_toBottomOf="@id/centerGuide" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secondChimeTime"
            android:text="@{@string/second_chime(viewModel.secondChimeTime)}"
            tools:text="@string/second_chime"
            app:layout_constraintLeft_toRightOf="@id/firstChimeTime"
            app:layout_constraintRight_toLeftOf="@id/endChimeTime"
            app:layout_constraintBottom_toBottomOf="@id/centerGuide"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endChimeTime"
            android:text="@{@string/end_chime(viewModel.endChimeTime)}"
            tools:text="@string/end_chime"
            app:layout_constraintLeft_toRightOf="@id/secondChimeTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/centerGuide" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingBtn"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/setting" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>