<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nokopi.stopwatchtimer.SettingViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstTimeText"
                android:text="@string/first_chime_text"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstTime"
                android:text="@{@string/setting_time(viewModel.firstChimeTime)}"
                android:textSize="40sp"
                android:textColor="@color/text_color"
                tools:text="00:00"
                app:layout_constraintTop_toBottomOf="@id/firstTimeText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/firstTimeSettingBtn"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstTimeSettingBtn"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintTop_toTopOf="@id/firstTime"
                app:layout_constraintLeft_toRightOf="@id/firstTime"
                app:layout_constraintBottom_toBottomOf="@id/firstTime"
                android:contentDescription="@string/setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/secondTimeText"
                android:text="@string/second_chime_text"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@id/firstTime"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/secondTime"
                android:text="@{@string/setting_time(viewModel.secondChimeTime)}"
                android:textSize="40sp"
                android:textColor="@color/text_color"
                tools:text="00:00"
                app:layout_constraintTop_toBottomOf="@id/secondTimeText"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/secondTimeSettingBtn"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintTop_toTopOf="@id/secondTime"
                app:layout_constraintLeft_toRightOf="@id/secondTime"
                app:layout_constraintBottom_toBottomOf="@id/secondTime"
                android:contentDescription="@string/setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endTimeText"
                android:text="@string/end_chime_text"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@id/secondTime"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endTime"
                android:text="@{@string/setting_time(viewModel.endChimeTime)}"
                android:textSize="40sp"
                android:textColor="@color/text_color"
                tools:text="00:00"
                app:layout_constraintTop_toBottomOf="@id/endTimeText"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endTimeSettingBtn"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintTop_toTopOf="@id/endTime"
                app:layout_constraintLeft_toRightOf="@id/endTime"
                app:layout_constraintBottom_toBottomOf="@id/endTime"
                android:contentDescription="@string/setting"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>